(lang dune 3.12)

(name pok_aml)

(generate_opam_files true)

(source
 (github tyrosine-rex/pok_aml))

(authors "thomas lahaie")

(maintainers " - ")

(license LICENSE)

(documentation https://url/to/documentation)

(package
 (name pok_aml)
 (synopsis "A short synopsis")
 (description "A longer description")
 (depends ocaml dune)
 (tags
  (topics "to describe" your project)))

; See the complete stanza docs at https://dune.readthedocs.io/en/stable/dune-files.html#dune-project
